Fixed overlap nav issue

--- a/web_app/sdlc-results/src/app/app.component.css
+++ b/web_app/sdlc-results/src/app/app.component.css
@@ -30,7 +30,7 @@ footer span {
 }
 
 footer p {
-  margin: 10px 30px;
+  margin: 10px 60px;
 }
 
 nav {
